--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -46,8 +46,8 @@
 
   <!-- 功能菜单 -->
   <view class="card menu-card">
-    <!-- 管理入口 -->
-    <view class="menu-item" bindtap="navigateTo" data-url="/pages/audit/index/index">
+    <!-- 管理入口 - 仅管理者可见 -->
+    <view class="menu-item" wx:if="{{hasManagementPermission}}" bindtap="navigateTo" data-url="/pages/audit/index/index">
       <view class="menu-left">
         <text class="menu-icon">⚙️</text>
         <text class="menu-name">管理入口</text>
@@ -63,7 +63,8 @@
       </view>
       <text class="menu-arrow">›</text>
     </view>
-    <view class="menu-item" bindtap="navigateTo" data-url="/pages/article/my-list/my-list">
+    <!-- 我的文章 - 仅管理者可见 -->
+    <view class="menu-item" wx:if="{{hasManagementPermission}}" bindtap="navigateTo" data-url="/pages/article/my-list/my-list">
       <view class="menu-left">
         <text class="menu-icon">📝</text>
         <text class="menu-name">我的文章</text>
