--- a/pages/discover/discover.wxml
+++ b/pages/discover/discover.wxml
@@ -21,6 +21,9 @@
         />
         <view class="search-btn" bindtap="handleSearchConfirm">搜索</view>
       </view>
+      <view class="slogan-container">
+        <view class="slogan-btn">silogn</view>
+      </view>
     </view>
   </view>
 
