--- a/pages/alumni-association/create/create.wxss
+++ b/pages/alumni-association/create/create.wxss
@@ -157,3 +157,59 @@ page {
   border-radius: 40rpx;
   font-weight: 500;
 }
+
+/* 图片上传样式 */
+.upload-container {
+  position: relative;
+}
+
+.upload-btn {
+  border: 1rpx solid #eee;
+  padding: 20rpx;
+  border-radius: 8rpx;
+  font-size: 28rpx;
+  height: 80rpx;
+  box-sizing: border-box;
+  background-color: #f9f9f9;
+  color: #666;
+  width: 100%;
+  text-align: center;
+  line-height: 40rpx;
+}
+
+.uploaded-image {
+  width: 200rpx;
+  height: 200rpx;
+  margin-top: 20rpx;
+  border-radius: 8rpx;
+}
+
+/* 申请材料上传样式 */
+.attachments-list {
+  margin-top: 20rpx;
+}
+
+.attachment-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15rpx;
+  background-color: #f9f9f9;
+  border-radius: 8rpx;
+  margin-bottom: 10rpx;
+}
+
+.attachment-name {
+  flex: 1;
+  font-size: 26rpx;
+  color: #333;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.attachment-delete {
+  font-size: 24rpx;
+  color: #ff4d4f;
+  margin-left: 20rpx;
+}
